# crypto-pegasus

./: .gitignore  README.md  pyproject.toml
pegasus/: config.py
pegasus/data/: provider.py
pegasus/engine/: backtest.py
pegasus/metrics/: report.py
pegasus/strategy/: base.py
pegasus/strategy/examples/: sma_cross.py
pegasus/viz/: plots.py
scripts/: run_backtest.py
strategies/: my_alpha.py
tests/: conftest.py  test_cli.py  test_engine.py  test_metrics.py  test_my_alpha.py  test_provider.py  test_strategy.py  test_viz.py
