[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-pegasus"
version = "0.1.0"
description = "High-performance crypto backtest platform for AI alpha research"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.1",
    "numpy>=1.24",
    "quantstats>=0.0.62",
    "plotly>=5.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
    "numba>=0.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["pegasus*", "strategies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
